--- a/book.toml
+++ b/book.toml
@@ -22,5 +22,5 @@ default-theme = "Latte"
 preferred-dark-theme = "Macchiato"
 
 [output.html.fold]
-enable = true
-level = 1
+enable = false
+level = 0
