--- a/book.toml
+++ b/book.toml
@@ -1,7 +1,7 @@
 [book]
-title = "Commentary"
+title = "Commentary of Dotfiles"
 author = "CoralPink"
-description = "Example of WezTerm configuration."
+description = "Example of dotfiles configuration for WezTerm and Neovim"
 src = "src"
 language = "ja"
 
