--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           path-to-root: ./book
           base-url-path: https://coralpink.github.io/commentary/
+          date-only: true
 
       - name: Sitemap stats
         run: |
