--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           mdbook build
 
+      - name: Delete Unneeded files
+        run: |
+          rm book/ayu-highlight.css book/tomorrow-night.css
+
       - name: Generate the sitemap
         id: sitemap
         uses: cicirello/generate-sitemap@v1.9.0
