feat: mdbook-footnote
I wanted to change the appearance, so I modified the code and used it.
refs: https://github.com/daviddrysdale/mdbook-footnote

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           mdbook-version: "latest"
 
+      - name: Cargo Build (Local Source)
+        run: |
+          cargo build --release --manifest-path rs/mdbook-footnote/Cargo.toml
+
       - name: Cargo install
         run: |
           cargo install mdbook-admonish
