--- a/book.toml
+++ b/book.toml
@@ -16,7 +16,7 @@ assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [output.html]
 additional-css = [
-  "css/catppuccin.css", "css/catppuccin-highlight.css", "css/mdbook-admonish.css", "css/pagetoc.css", "css/header.css"
+  "css/catppuccin.css", "css/catppuccin-highlight.css", "css/mdbook-admonish.css", "css/pagetoc.css", "css/headline.css"
 ]
 additional-js = ["js/pagetoc.js"]
 default-theme = "Latte"
