--- a/book.toml
+++ b/book.toml
@@ -15,9 +15,7 @@ assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 [preprocessor.footnote]
 
 [output.html]
-additional-css = [
-  "css/catppuccin.css", "css/catppuccin-highlight.css", "css/mdbook-admonish.css", "css/pagetoc.css", "css/headline.css"
-]
+additional-css = ["css/style.css"]
 additional-js = ["js/pagetoc.js"]
 default-theme = "Latte"
 preferred-dark-theme = "Macchiato"
