--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -52,6 +52,7 @@ jobs:
           npm run compile --prefix scss theme/chrome.scss ../theme/css/chrome.css
           npm run compile --prefix scss theme/general.scss ../theme/css/general.css
           npm run compile --prefix scss theme/variables.scss ../theme/css/variables.css
+          npm run compile --prefix scss fonts/fonts.scss ../src/fonts/fonts.css
           npm run compile --prefix scss style.scss ../css/style.css
 
       - name: Build mdBook
