--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Npm install
         run: |
           npm install --prefix scss
+          npm install --prefix js
 
       - name: Scss Compile
         run: |
@@ -54,6 +55,11 @@ jobs:
           npm run compile --prefix scss theme/variables.scss ../theme/css/variables.css
           npm run compile --prefix scss fonts/fonts.scss ../src/fonts/fonts.css
           npm run compile --prefix scss style.scss ../css/style.css
+
+      - name: Js Compress
+        run: |
+          mkdir js/dist
+          npm run uglifyjs --prefix js -input='pagetoc.js' -output='dist/pagetoc.js'
 
       - name: Build mdBook
         run: |
