--- a/book.toml
+++ b/book.toml
@@ -16,7 +16,7 @@ assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [output.html]
 additional-css = ["css/style.css"]
-additional-js = ["js/pagetoc.js"]
+additional-js = ["js/dist/pagetoc.js"]
 default-theme = "Latte"
 preferred-dark-theme = "Macchiato"
 git-repository-url = "https://github.com/CoralPink/commentary"
