--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -60,6 +60,8 @@ jobs:
         run: |
           mkdir js/dist
           npm run uglifyjs --prefix js -input='pagetoc.js' -output='dist/pagetoc.js'
+          npm run uglifyjs --prefix js -input='book.js' -output='../theme/book.js'
+          npm run uglifyjs --prefix js -input='searcher.js' -output='../src/searcher.js'
 
       - name: Build mdBook
         run: |
