--- a/rs/mdbook-footnote/Cargo.toml
+++ b/rs/mdbook-footnote/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdbook-footnote"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["David Drysdale <dmd@lurklurk.org>", "CoralPink"]
 edition = "2021"
 license = "Apache-2.0"
@@ -10,7 +10,8 @@ categories = ["text-processing"]
 
 [dependencies]
 clap = "4.0"
-lazy_static = "1.4"
 mdbook = "0.4"
-regex = "1.7"
+semver = "1.0"
 serde_json = "1.0"
+lazy_static = "1.4"
+regex = "1.7"
