Moved <script> that existed in `index.hbs` to `start.js`.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -57,10 +57,11 @@ jobs:
 
       - name: Js Compress
         run: |
+          npm run uglifyjs --prefix js -input='start.js' -output='../src/start.js'
+          npm run uglifyjs --prefix js -input='searcher.js' -output='../src/searcher.js'
+          npm run uglifyjs --prefix js -input='book.js' -output='../theme/book.js'
           mkdir js/dist
           npm run uglifyjs --prefix js -input='pagetoc.js' -output='dist/pagetoc.js'
-          npm run uglifyjs --prefix js -input='book.js' -output='../theme/book.js'
-          npm run uglifyjs --prefix js -input='searcher.js' -output='../src/searcher.js'
 
       - name: Build mdBook
         run: |
