--- a/js/package.json
+++ b/js/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "uglify-js": "^3.17.4"
+    "terser": "5.16.1"
   },
   "scripts": {
-    "uglifyjs": "node_modules/uglify-js/bin/uglifyjs $npm_config_input --compress --mangle --output $npm_config_output"
+    "terser": "node_modules/terser/bin/terser $npm_config_input --compress --mangle --ecma 2022 --output $npm_config_output"
   }
 }
