I highlighting the Vim command.
highlight.js has also been updated to organize styles in a compact manner.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Delete Unneeded files
         run: |
           rm book/ayu-highlight.css book/tomorrow-night.css
+          rm book/highlight.css book/highlight.js
           rm book/css/variables.css
           rm -rf book/FontAwesome
 
