--- a/book.toml
+++ b/book.toml
@@ -8,12 +8,6 @@ language = "ja"
 [build]
 create-missing = false
 
-[preprocessor.admonish]
-command = "mdbook-admonish"
-assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
-
-[preprocessor.footnote]
-
 [output.html]
 additional-css = ["css/style.css"]
 additional-js = ["js/dist/pagetoc.js"]
@@ -21,10 +15,34 @@ default-theme = "Latte"
 preferred-dark-theme = "Macchiato"
 git-repository-url = "https://github.com/CoralPink/commentary"
 site-url = "/commentary/"
-
-[output.html.print]
-enable = false
+copy-fonts = true
 
 [output.html.fold]
 enable = true
 level = 1
+
+[output.html.playground]
+copyable = true
+copy-js = false
+runnable = false
+
+[output.html.print]
+enable = false
+
+[output.html.search]
+enable = true            # enables the search feature
+limit-results = 10       # maximum number of search results
+teaser-word-count = 5    # number of words used for a search result teaser
+use-boolean-and = true   # multiple search terms must all match
+boost-title = 5          # ranking boost factor for matches in headers
+boost-hierarchy = 1      # ranking boost factor for matches in page names
+boost-paragraph = 1      # ranking boost factor for matches in text
+expand = true            # partial words will match longer terms
+heading-split-level = 5  # link results to heading levels
+copy-js = true           # include Javascript code for search (elasticlunr.min.js)
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
+
+[preprocessor.footnote]
