--- a/book.toml
+++ b/book.toml
@@ -18,7 +18,7 @@ site-url = "/commentary/"
 copy-fonts = true
 
 [output.html.fold]
-enable = true
+enable = false
 level = 2
 
 [output.html.playground]
