--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v1
         with:
-          mdbook-version: "0.4.26"
+          mdbook-version: "0.4.26" # I'd like to skip 0.4.27 if possible.
 
       - name: Cache Cargo
         id: cache-cargo
