--- a/book.toml
+++ b/book.toml
@@ -45,3 +45,5 @@ command = "mdbook-admonish"
 assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [preprocessor.footnote]
+
+[preprocessor.tailor]
