Tentative response to the case where two images exist in one line 🐠🐠
I asked chatGPT a lot of questions, and he became a pain in the ass and showed me most of the codes....

All I have to do is upload! 😉
I don't know which one of us is the machine! 🤣

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -42,7 +42,7 @@ jobs:
         if: steps.cache-cargo.outputs.cache-hit != 'true'
         run: |
           cargo install mdbook-admonish
-          cargo install mdbook-tailor
+          cargo install --version 0.0.5 mdbook-tailor
 
       - name: Npm Install
         run: |
