--- a/book.toml
+++ b/book.toml
@@ -41,6 +41,7 @@ heading-split-level = 6  # link results to heading levels
 copy-js = true           # include Javascript code for search (elasticlunr.min.js)
 
 [preprocessor.admonish]
+after = ["links"]
 command = "mdbook-admonish"
 assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 
