--- a/scss/package.json
+++ b/scss/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "sass": "^1.62.0"
+    "sass": "1.62.1"
   },
   "scripts": {
     "compile": "node_modules/sass/sass.js --no-source-map --style=compressed",
