--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Scss Compile
         run: |
           npm run compile --prefix scss style.scss ../css/style.css
-          npm run compile --prefix scss fonts/fonts.scss ../src/fonts/fonts.css
+          npm run compile --prefix scss fonts/fonts.scss ../theme/fonts/fonts.css
           npm run compile --prefix scss theme/chrome.scss ../theme/css/chrome.css
           npm run compile --prefix scss theme/general.scss ../theme/css/general.css
 
