--- a/book.toml
+++ b/book.toml
@@ -15,6 +15,7 @@ default-theme = "Latte"
 preferred-dark-theme = "Macchiato"
 git-repository-url = "https://github.com/CoralPink/commentary"
 site-url = "/commentary/"
+copy-fonts = false
 
 [output.html.fold]
 enable = false
