--- a/book.toml
+++ b/book.toml
@@ -30,9 +30,9 @@ enable = false
 
 [output.html.search]
 enable = true            # enables the search feature
-limit-results = 100       # maximum number of search results
+limit-results = 20       # maximum number of search results
 teaser-word-count = 5    # number of words used for a search result teaser
-use-boolean-and = true   # multiple search terms must all match
+use-boolean-and = false  # multiple search terms must all match
 boost-title = 3          # ranking boost factor for matches in headers
 boost-hierarchy = 1      # ranking boost factor for matches in page names
 boost-paragraph = 2      # ranking boost factor for matches in text
