--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,19 +3,19 @@
   "name": "Commentary of Dotfiles",
   "icons": [
     {
-      "src": "/maskable_icon_x512.png",
+      "src": "maskable_icon_x512.png",
       "type": "image/svg+xml",
       "sizes": "512x512"
     },
     {
-      "src": "/maskable_icon_x192.png",
+      "src": "maskable_icon_x192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     }
   ],
-  "id": "/index.html",
-  "start_url": "/index.html",
+  "id": "index.html",
+  "start_url": "index.html",
   "background_color": "#eff1f5",
   "display": "minimal-ui",
   "scope": "/",
@@ -25,14 +25,14 @@
       "name": "Introduction",
       "short_name": "Introduction - Commentary of Dotfiles",
       "description": "This site introduces WezTerm and Neovim dotfiles.",
-      "url": "/index.html",
-      "icons": [{ "src": "/maskable_icon_x192.png", "sizes": "192x192" }]
+      "url": "index.html",
+      "icons": [{ "src": "maskable_icon_x192.png", "sizes": "192x192" }]
     }
   ],
   "description": "This site introduces WezTerm and Neovim dotfiles.",
   "screenshots": [
     {
-      "src": "/goal.webp",
+      "src": "goal.webp",
       "type": "image/webp",
       "sizes": "662x540",
       "form_factor": "narrow"
