Register a `service worker` 🦭
I'm much worried, but at any rate, I'm not getting any strange errors...!
so let's take the plunge 🐻‍❄️

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           npm run compress --prefix js -input='book.js' -output='../theme/book.js'
           npm run compress --prefix js -input='searcher.js' -output='../src/searcher.js'
+          npm run compress --prefix js -input='serviceworker.js' -output='../src/serviceworker.js'
 
       - name: Js Copy Files
         run: |
