Apply `highlight.js` v11.8.0 🌺
So far, we have been using the one created from `https://highlightjs.org/download/`.
From now on, we will use the locally built version.

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,17 @@ book
 commentary
 target
 node_modules
-dist
+
+js/highlight.js
 
 *.css
 *.css.map
 *.tmp
 
+
 src/clipboard.min.js
 src/fzf.umd.js
+src/highlight.min.js
 src/mark.es6.min.js
 src/searcher.js
 src/serviceworker.js
