--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -13,6 +13,7 @@ license = "Apache-2.0"
 crate-type = ["cdylib"]
 
 [dependencies]
+js-sys = "0.3"
 wasm-bindgen = "0.2"
 
 [dependencies.web-sys]
@@ -20,5 +21,6 @@ version = "0.3"
 features = [
   "Document",
   "Element",
+  "NodeList",
   "Window",
 ]
