I will actually use WASM, although it is still only a modest process 🦔
It's pretty scary, though! 😣

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -76,7 +76,7 @@ jobs:
           pushd rs/wasm
           wasm-pack build --target web
           pushd
-          cp rs/wasm/pkg/wasm.js src
+          npm run compress --prefix js -input='../rs/wasm/pkg/wasm.js' -output='../src/wasm.js'
           cp rs/wasm/pkg/wasm_bg.wasm src
 
       - name: Build mdBook
