--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -12,9 +12,16 @@ license = "Apache-2.0"
 [lib]
 crate-type = ["cdylib"]
 
+[profile.release]
+lto = true
+
+[features]
+default = ["wee_alloc"]
+
 [dependencies]
 js-sys = "0.3"
 wasm-bindgen = "0.2"
+wee_alloc = { version = "0.4", optional = true }
 
 [dependencies.web-sys]
 version = "0.3"
