Preparation for using `webpack` 📦

--- a/js/package.json
+++ b/js/package.json
@@ -3,9 +3,11 @@
     "clipboard": "2.0.11",
     "fzf": "0.5.2",
     "mark.js": "8.11.1",
-    "terser": "5.19.3"
+    "terser": "5.19.3",
+    "webpack-cli": "5.1.4"
   },
   "scripts": {
-    "compress": "node_modules/terser/bin/terser $npm_config_input --compress --mangle --ecma 2022 --output $npm_config_output"
+    "build": "webpack",
+    "compress": "terser $npm_config_input --compress --mangle --ecma 2022 --output $npm_config_output"
   }
 }
