--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,44 +34,33 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Cargo Install (Local Source)
-        if: steps.cache-cargo.outputs.cache-hit != 'true'
-        run: |
-          cargo install --path ./rs/mdbook-footnote
-
-      - name: Cargo Install
+      - name: Install Cargo
         if: steps.cache-cargo.outputs.cache-hit != 'true'
         run: |
           cargo install mdbook-admonish
           cargo install mdbook-tailor
           cargo install wasm-pack
+          cargo install --path ./rs/mdbook-footnote
 
-      - name: Npm Install
+      - name: Install Npm
         run: |
           npm install --prefix js
           npm install --prefix scss
 
-      - name: Js Compress
+      - name: Build Js
         run: |
-          npm run compress --prefix js -input='book.js' -output='../theme/book.js'
-          npm run compress --prefix js -input='searcher.js' -output='../src/searcher.js'
-          npm run compress --prefix js -input='serviceworker.js' -output='../src/serviceworker.js'
+          npm run build --prefix js
+          npm run compress --prefix js -input='serviceworker.js' -output='dist/serviceworker.js'
+          cp -r js/dist/ src/
 
-      - name: Js Copy Files
-        run: |
-          cp js/highlight.min.js src
-          cp js/node_modules/clipboard/dist/clipboard.min.js src
-          cp js/node_modules/fzf/dist/fzf.umd.js src
-          cp js/node_modules/mark.js/dist/mark.es6.min.js src
-
-      - name: Scss Compile
+      - name: Build Scss
         run: |
           npm run compile --prefix scss style.scss ../src/css/style.css
           npm run compile --prefix scss fonts/fonts.scss ../theme/fonts/fonts.css
           npm run compile --prefix scss theme/chrome.scss ../theme/css/chrome.css
           npm run compile --prefix scss theme/general.scss ../theme/css/general.css
 
-      - name: Wasm Compile
+      - name: Build Wasm
         run: |
           pushd rs/wasm
           wasm-pack build --target web
