fix: Module not found ⛔

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -55,6 +55,7 @@ jobs:
           pushd js
           npm install
           npm link wasm-book
+          sh create-highlight.sh
           npm run build
           npm run compress -input='serviceworker.js' -output='dist/serviceworker.js'
           cp -r dist/ ../src/
