--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -58,7 +58,7 @@ jobs:
           sh create-highlight.sh
           npm run build
           npm run compress -input='serviceworker.js' -output='dist/serviceworker.js'
-          cp -r dist/ ../src/
+          cp -r dist/. ../src/
           pushd
 
       - name: Build Scss
