Oh... Wrong target... 🤦‍♀️

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build Wasm
         run: |
           pushd rs/wasm
-          wasm-pack build --target web
+          wasm-pack build --target bundler
           cd pkg
           npm link
           pushd
