Review npm package management 🪺
I'm getting used to dealing with github and have settled down a lot,
so it's time to think about the next step!

--- a/scss/package.json
+++ b/scss/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "sass": "1.66.1"
+    "sass": "^1.66.1"
   },
   "scripts": {
     "compile": "node_modules/sass/sass.js --no-charset --no-source-map --style=compressed",
