--- a/js/package.json
+++ b/js/package.json
@@ -1,13 +1,11 @@
 {
   "dependencies": {
-    "clipboard": "2.0.11",
-    "fzf": "0.5.2",
-    "mark.js": "8.11.1",
-    "terser": "5.19.3",
-    "webpack-cli": "5.1.4"
+    "clipboard": "^2.0.11",
+    "fzf": "^0.5.2",
+    "mark.js": "^8.11.1",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack",
-    "compress": "terser $npm_config_input --compress --mangle --ecma 2022 --output $npm_config_output"
+    "build": "webpack"
   }
 }
