It sounds kinda fun, try `Bun` 🤏

--- a/js/package.json
+++ b/js/package.json
@@ -3,6 +3,7 @@
     "clipboard": "^2.0.11",
     "fzf": "^0.5.2",
     "mark.js": "^8.11.1",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
