--- a/scss/package.json
+++ b/scss/package.json
@@ -3,7 +3,7 @@
     "sass": "^1.66.1"
   },
   "scripts": {
-    "compile": "node_modules/sass/sass.js --no-charset --no-source-map --style=compressed",
-    "debug": "node_modules/sass/sass.js --no-charset"
+    "compile": "sass --no-charset --no-source-map --style=compressed",
+    "debug": "sass --no-charset"
   }
 }
