`Catppuccin for mdBook` version from v0.2.1 to v1.0.0 🐈‍⬛ ☕ We used to offer customized `latte` and `frappe`, but we have decided to make them fully compliant.
However, the impression will still be very different, so if you can't forget the taste of your old `latte`, please try the new `au lait` menu.

--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,7 @@ language = "ja"
 create-missing = false
 
 [output.html]
-default-theme = "Latte"
+default-theme = "Au Lait"
 preferred-dark-theme = "Macchiato"
 git-repository-url = "https://github.com/CoralPink/commentary"
 site-url = "/commentary/"
