--- a/js/package.json
+++ b/js/package.json
@@ -2,9 +2,6 @@
   "dependencies": {
     "clipboard": "^2.0.11",
     "fzf": "^0.5.2",
-    "mark.js": "^8.11.1",
-    "wasm-book": "link:wasm-book",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "mark.js": "^8.11.1"
   }
 }
