Optimizing the build process ⛳
- `wasm_book.js` is imported into `book.js`, so it is not needed after the build is complete.
- Conversely, `wasm_book_bg.wasm` is not needed at build time.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -51,9 +51,8 @@ jobs:
         run: |
           pushd rs/wasm
           wasm-pack build --target web
-          cd pkg
-          cp wasm_book.js ../../../js
-          cp wasm_book_bg.wasm ../../../js
+          cp pkg/wasm_book.js ../../js
+          cp pkg/wasm_book_bg.wasm ../../src
           pushd
 
       - name: Build Js
@@ -63,8 +62,6 @@ jobs:
           bun install
           bun run build.js
           cp -r dist/. ../src/
-          cp wasm_book.js ../src
-          cp wasm_book_bg.wasm ../src
           pushd
 
       - name: Build Scss
