--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -81,6 +81,7 @@ jobs:
       - name: Remove Unneeded Files
         run: |
           rm book/ayu-highlight.css
+          rm book/clipboard.min.js
           rm book/highlight.css
           rm book/highlight.js
           rm book/tomorrow-night.css
