--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-book"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
 edition = "2021"
 rust-version = "1.70"
@@ -17,6 +17,7 @@ lto = true
 
 [dependencies]
 js-sys = "0.3"
+rust-stemmers = "1.2"
 wasm-bindgen = "0.2"
 
 [dependencies.web-sys]
