--- a/book.toml
+++ b/book.toml
@@ -30,7 +30,7 @@ enable = false
 enable = true            # enables the search feature
 limit-results = 40       # maximum number of search results
 teaser-word-count = 5    # number of words used for a search result teaser
-use-boolean-and = false  # multiple search terms must all match
+use-boolean-and = true   # multiple search terms must all match
 boost-title = 3          # ranking boost factor for matches in headers
 boost-hierarchy = 1      # ranking boost factor for matches in page names
 boost-paragraph = 2      # ranking boost factor for matches in text
