--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -23,6 +23,7 @@ wasm-bindgen = "0.2"
 [dependencies.web-sys]
 version = "0.3"
 features = [
+  "console",
   "Document",
   "Element",
   "NodeList",
