Organize icons and Open Graph ⚜️

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -83,6 +83,7 @@ jobs:
           rm book/ayu-highlight.css
           rm book/clipboard.min.js
           rm book/elasticlunr.min.js
+          rm book/favicon.png
           rm book/highlight.css
           rm book/highlight.js
           rm book/searcher.js
