--- a/rs/mdbook-footnote/Cargo.toml
+++ b/rs/mdbook-footnote/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdbook-footnote"
-version = "1.0.3"
+version = "1.1.0"
 authors = ["David Drysdale <dmd@lurklurk.org>", "CoralPink"]
 edition = "2021"
 rust-version = "1.70"
@@ -9,10 +9,10 @@ license = "Apache-2.0"
 [dependencies]
 clap = "4.4"
 mdbook = "0.4"
+once_cell = "1.19"
+regex = "1.10"
 semver = "1.0"
 serde_json = "1.0"
-lazy_static = "1.4"
-regex = "1.10"
 
 [profile.release]
 lto = "thin"
