--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,17 +5,34 @@ updates:
     directory: "/rs/mdbook-footnote"
     schedule:
       interval: "weekly"
+    groups:
+      rs-footnote-dependencies:
+        update-type: "development"
+
+  - package-ecosystem: "cargo"
+    directory: "/rs/wasm"
+    schedule:
+      interval: "weekly"
+    groups:
+      rs-wasm-dependencies:
+        update-type: "development"
 
   # Enable version updates for npm
   - package-ecosystem: "npm"
     directory: "/scss"
     schedule:
       interval: "weekly"
+    groups:
+      scss-dependencies:
+        update-type: "development"
 
   - package-ecosystem: "npm"
     directory: "/js"
     schedule:
       interval: "weekly"
+    groups:
+      js-dependencies:
+        update-type: "development"
 
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
